fix: funtionality bugs